--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,13 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "jsx": "react-native"
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
+    "nativewind-env.d.ts",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
   ]
